--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -12,4 +12,5 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{struct__tcpHeader}{\+\_\+tcp\+Header} }{\pageref{struct__tcpHeader}}{}
 \item\contentsline{section}{\hyperlink{struct__udpHeader}{\+\_\+udp\+Header} }{\pageref{struct__udpHeader}}{}
 \item\contentsline{section}{\hyperlink{structmqttRxBf__t}{mqtt\+Rx\+Bf\+\_\+t} }{\pageref{structmqttRxBf__t}}{}
+\item\contentsline{section}{\hyperlink{structoptFld__t}{opt\+Fld\+\_\+t} }{\pageref{structoptFld__t}}{}
 \end{DoxyCompactList}
